--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "next": "13.4.12",
+    "openai": "^5.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-  "autoprefixer": "^10.4.0",
-  "postcss": "^8.4.5",
-  "tailwindcss": "^3.1.8",
-  "typescript": "^5.2.0",
-  "@types/react": "^18.0.28",
-  "@types/node": "^20.4.2"
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.0.28",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^5.2.0"
   }
 }
